# gpu-simulate-test

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
configs/: README.md
configs/compare_vidur_real/: compare_runs.yaml  real_bench.yaml  vidur_profile.yaml  vidur_sim.yaml  workload_spec.yaml
configs/compare_vidur_real/backend/: sarathi.yaml  transformers.yaml
configs/compare_vidur_real/hardware/: a100.yaml
configs/compare_vidur_real/model/: qwen3_0_6b.yaml
configs/compare_vidur_real/vidur/: default.yaml
configs/compare_vidur_real/workload/: default.yaml
context/: README.md
context/design/: README.md
context/hints/: README.md  howto-compare-vidur-vs-real-qwen3-a100-timing.md  howto-reproduce-vidur-results.md  howto-run-basic-vidur-simulation.md
context/instructions/: README.md  prep-dev-env.md
context/issues/: README.md
context/issues/known/: README.md  issue-vidur-sim-underpredicts-sarathi-real-qwen3-0.6b.md
context/issues/resolved/: README.md
context/logs/: README.md
context/plans/: README.md  plan-compare-vidur-vs-real-qwen3-a100-timing.md  plan-reproduce-vidur-paper-fidelity.md
context/refcode/: README.md
context/roles/: README.md
context/roles/role1/: README.md
context/roles/role2/: README.md
context/rules/: README.md
context/runbooks/: 001-compare-vidur-real-timing-troubleshooting.md
context/summaries/: README.md  about-vidur-gpu-simulator.md  howto-use-sarathi-serve.md  howto-use-vidur.md
context/tasks/: README.md
context/tasks/backlog/: README.md
context/tasks/done/: README.md
context/tasks/working/: README.md
context/tools/: README.md
datasets/: README.md  bootstrap.sh
datasets/coco2017/: README.md  bootstrap.sh
docs/: index.md
docs/developer/: architecture.md  configs.md  contracts.md  features.md  index.md  testing.md
docs/manual/: artifacts.md  index.md  run-workflow.md  setup.md  troubleshooting.md
models/: README.md  bootstrap.sh  bootstrap.yaml
models/internlm-20b/: README.md  bootstrap.sh  bootstrap.yaml
models/llama2-70b-hf/: README.md  bootstrap.yaml
models/llama2-7b-hf/: README.md  bootstrap.yaml
models/qwen-72b/: README.md  bootstrap.yaml
models/qwen3-0.6b/: README.md  bootstrap.sh  bootstrap.yaml
results/: README.md
results/raw/: .gitignore  README.md
specs/001-compare-vidur-real-timing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-compare-vidur-real-timing/checklists/: requirements.md
specs/001-compare-vidur-real-timing/contracts/: README.md  request_metrics.md  run_meta.json.md  run_meta.schema.json  token_metrics.md  workload_meta.schema.json  workload_spec.md
specs/002-reproduce-vidur-paper-fidelity/: spec.md
specs/002-reproduce-vidur-paper-fidelity/checklists/: requirements.md
src/gpu_simulate_test/analysis/: __init__.py  compare.py  load_metrics.py  plots.py  report.py
src/gpu_simulate_test/config/: base.py  (+2 more)
tests/manual/: test_compare_runs_smoke.py  test_real_bench_smoke.py  test_vidur_profile_smoke.py  test_vidur_sim_smoke.py  test_workload_spec_smoke.py
tests/unit/: test_artifact_schemas.py  test_compare_alignment.py  test_real_metrics_schema.py  test_vidur_sim_prereqs.py  test_workload_spec_determinism.py
(+115 files in other folders)
