[project]
authors = [{name = "igamenovoer", email = "igamenovoer@xx.com"}]
name = "gpu-simulate-test"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gpu_simulate_test = { path = ".", editable = true }
mdutils = "*"
scipy = "*"
torch = "==2.9.1+cu128"
transformers = "*"
diffusers = "*"
torchvision = "*"
scalesim = "*"
matplotlib = "*"
seaborn = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
wandb = "*"
kaleido = "*"
ddsketch = "*"
plotly_express = "*"
fasteners = "*"
fastapi = "*"
flashinfer-python = ">=0.4.1"
grpcio = "*"
jupyterlab = "*"
ninja = "*"
openai = "*"
pillow = "*"
psutil = "*"
pyarrow = "*"
ray = ">=2.5.1"
sentencepiece = "*"
tiktoken = "*"
tqdm = "*"
uvicorn = "*"

[tool.pixi.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]
index-strategy = "unsafe-best-match"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
